made UI scale/resize correctly