@@ -1,7 +1,10 @@
 package org.kittykat.cat65.ui.window;
 
+import javafx.beans.property.DoubleProperty;
+import javafx.beans.property.SimpleDoubleProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
 import javafx.scene.control.skin.ListViewSkin;
 import javafx.scene.control.skin.VirtualFlow;
@@ -14,11 +17,16 @@ public class HexView extends WindowWithTitle {
     private final ObservableList<String> lines = FXCollections.observableArrayList();
     private final ListView<String> hexView;
 
+    private static final double MAX_FONT_SIZE      = 12d;
+    private static final double FONT_SIZE_CONSTANT = MAX_FONT_SIZE / 560d;
+    private static final double MAX_CELL_SIZE      = 20d;
+    private static final double FONT_TO_CELL_SIZE  = MAX_CELL_SIZE / MAX_FONT_SIZE;
+    private final DoubleProperty fontSize = new SimpleDoubleProperty(MAX_FONT_SIZE);
+
     public HexView() {
         super("Hex Viewer [CPU Memory]");
 
         hexView = new ListView<>(lines);
-        hexView.setFixedCellSize(20);
         hexView.setCache(true);
         //hexView.setCacheHint(CacheHint.SPEED);
         VBox.setVgrow(hexView, Priority.ALWAYS);
@@ -27,17 +35,43 @@ public class HexView extends WindowWithTitle {
             lines.add(getVisualizerLine(l));
         }
         this.getChildren().add(hexView);
+
+        hexView.setCellFactory(list -> new ListCell<>() {
+            {
+                setFontSize(fontSize.doubleValue());
+                fontSize.addListener((obs, oldSize, newSize) -> setFontSize(newSize.doubleValue()));
+            }
+
+            private void setFontSize(double size) {
+                setStyle("-fx-font-size: %f;".formatted(size));
+            }
+
+            @Override
+            protected void updateItem(String item, boolean empty) {
+                super.updateItem(item, empty);
+                setText(empty ? null : item);
+            }
+        });
+        hexView.widthProperty().addListener(
+                (obs, oldWidth, newWidth) -> updateFontSize(newWidth.doubleValue()));
+        updateFontSize(hexView.getWidth());
+    }
+
+    private void updateFontSize(double width) {
+        double newSize = Math.min(MAX_FONT_SIZE, width * FONT_SIZE_CONSTANT);
+        hexView.setFixedCellSize(Math.ceil(newSize * FONT_TO_CELL_SIZE));
+        fontSize.set(newSize);
     }
 
     public String getVisualizerLine(int lineNum) {
         int address = lineNum << 4;
-        StringBuilder hex = new StringBuilder(String.format("$%04x:", address));
+        StringBuilder hex = new StringBuilder("$%04x:".formatted(address));
         StringBuilder ascii = new StringBuilder("  |  ");
         for (int a = 0; a < 16; a++) {
             int b = CMU.get(address + a, false);
-            hex.append(String.format("%s %02x", (a == 8) ? " " : "", b));
+            hex.append("%s %02x".formatted((a == 8) ? " " : "", b));
             char chr = EmuHelper.convertToASCII(b);
-            ascii.append(String.format("%s%c", (a == 8) ? " " : "", chr));
+            ascii.append("%s%c".formatted((a == 8) ? " " : "", chr));
         }
         return hex.toString() + ascii;
     }
